--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,18 @@
     ],
     "require": {
         "php": "^7.1.3 || ^8.0",
-        "illuminate/container": "^5.5 || ^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/contracts": "^5.5 || ^6.0 || ^7.0 || ^8.0|| ^9.0",
-        "illuminate/events": "^5.5 || ^6.0 || ^7.0 || ^8.0|| ^9.0",
-        "illuminate/pagination": "^5.5 || ^6.0 || ^7.0 || ^8.0|| ^9.0",
-        "illuminate/support": "^5.5 || ^6.0 || ^7.0 || ^8.0|| ^9.0",
-        "illuminate/view": "^5.5 || ^6.0 || ^7.0 || ^8.0|| ^9.0"
+        "illuminate/container": "^5.5 || ^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0 || ^11.0",
+        "illuminate/contracts": "^5.5 || ^6.0 || ^7.0 || ^8.0|| ^9.0 || ^10.0 || ^11.0",
+        "illuminate/events": "^5.5 || ^6.0 || ^7.0 || ^8.0|| ^9.0 || ^10.0 || ^11.0",
+        "illuminate/pagination": "^5.5 || ^6.0 || ^7.0 || ^8.0|| ^9.0 || ^10.0 || ^11.0",
+        "illuminate/support": "^5.5 || ^6.0 || ^7.0 || ^8.0|| ^9.0 || ^10.0 || ^11.0",
+        "illuminate/view": "^5.5 || ^6.0 || ^7.0 || ^8.0|| ^9.0 || ^10.0 || ^11.0"
     },
     "require-dev": {
-        "graham-campbell/analyzer": "^2.4 || ^3.0",
-        "graham-campbell/testbench": "^5.4",
+        "graham-campbell/analyzer": "^2.4 || ^3.0 || ^4.0",
+        "graham-campbell/testbench": "^5.4 || ^6.0",
         "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^6.5.14 || ^7.5.20 || ^8.5.8 || ^9.3.7"
+        "phpunit/phpunit": "^6.5.14 || ^7.5.20 || ^8.5.8 || ^9.3.7 || ^10.0"
     },
     "autoload": {
         "psr-4": {
