--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,6 @@
             ]
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
